--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,8 @@ header {
   text-align: right;
 }
 
-.btn-cart {
+.btn-cart,
+.btn-cart-block {
   width: 120px;
   height: 35px;
   font-size: 1.2em;
@@ -24,16 +25,92 @@ header {
   color: #433512;
 }
 
-.btn-cart:hover {
+.btn-cart:hover,
+.btn-cart-block:hover {
   background-color: #433512;
   color: #d1ccc4;
   -webkit-transform: scale(1.1);
           transform: scale(1.1);
 }
 
-.btn-cart:active {
+.btn-cart:active,
+.btn-cart-block:active {
   background-color: #7c4a24;
   color: #d5dadd;
+}
+
+.btn-cart-block {
+  margin: 5px;
+}
+
+.btn-cart-block-addItem, .btn-cart-block-delItem {
+  width: 60px;
+}
+
+.cart-wrp {
+  padding: 50px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(67, 53, 18, 0.6);
+  position: absolute;
+  left: 0;
+  top: 0;
+  visibility: hidden;
+}
+
+.cart-block {
+  margin: 0 auto;
+  padding: 10px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 800px;
+  min-height: 200px;
+  background-color: #c2a97d;
+  text-align: left;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+.cart-btnsAll {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.cart-item {
+  font-size: 1em;
+  color: #433512;
+}
+
+.cart-item-name {
+  display: inline-block;
+  width: 42%;
+  font-weight: 600;
+}
+
+.cart-item-price {
+  display: inline-block;
+  width: 20%;
+  text-align: center;
+}
+
+.cart-item-quantity {
+  display: inline-block;
+  width: 20%;
+  text-align: center;
 }
 
 .products {
@@ -57,8 +134,6 @@ header {
 
 .product-item:hover {
   background-color: #c2a97d;
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
 }
 
 .product-item:hover > .buy-btn {
