--- a/sass/style.sass
+++ b/sass/style.sass
@@ -19,7 +19,8 @@ header
     background-color: $lightBrown
     text-align: right
     
-.btn-cart
+.btn-cart,
+.btn-cart-block
     width: 120px
     height: 35px
     font-size: 1.2em
@@ -36,6 +37,55 @@ header
     &:active
         background-color: $darkBrown
         color: $transparentGrey
+
+.btn-cart-block
+    margin: 5px
+    &-addItem,
+    &-delItem
+        width: 60px
+
+.cart-wrp
+    padding: 50px
+    box-sizing: border-box
+    width: 100%
+    height: 100vh
+    background-color: rgba(67,53,18, .6)
+    position: absolute
+    left: 0
+    top: 0
+    visibility: hidden
+
+.cart-block
+    margin: 0 auto
+    padding: 10px
+    box-sizing: border-box
+    width: 800px
+    min-height: 200px
+    background-color: $lightBrown
+    text-align: left
+    display: flex
+    flex-direction: column
+    justify-content: space-evenly
+
+.cart-btnsAll
+    display: flex
+    justify-content: space-between
+
+.cart-item
+    font-size: 1em
+    color: #433512
+    &-name
+        display: inline-block
+        width: 42%
+        font-weight: 600
+    &-price
+        display: inline-block
+        width: 20%
+        text-align: center
+    &-quantity
+        display: inline-block
+        width: 20%
+        text-align: center
     
 .products
     padding: 25px
@@ -53,7 +103,6 @@ header
 
     &:hover
         background-color: $lightBrown
-        transform: scale(1.1)
         
     &:hover > .buy-btn
         background-color: $transparentBrown
