--- a/sass/style.sass
+++ b/sass/style.sass
@@ -76,15 +76,19 @@ header
     color: #433512
     &-name
         display: inline-block
-        width: 42%
+        width: 37%
         font-weight: 600
     &-price
         display: inline-block
-        width: 20%
+        width: 15%
         text-align: center
     &-quantity
         display: inline-block
-        width: 20%
+        width: 15%
+        text-align: center
+    &-summ
+        display: inline-block
+        width: 15%
         text-align: center
     
 .products
