--- a/sass/style.sass
+++ b/sass/style.sass
@@ -70,6 +70,7 @@ header
 .cart-btnsAll
     display: flex
     justify-content: space-between
+    align-items: center
 
 .cart-item
     font-size: 1em
