--- a/css/style.css
+++ b/css/style.css
@@ -1,202 +1,171 @@
-body {
-  margin: 0 auto;
-  width: 1000px;
-  font-family: 'Play', sans-serif;
+body{
+    font-family: 'SF Pro Display', sans-serif;
+}
+header{
+    display: flex;
+    background-color: #2f2a2d;
+    justify-content: space-between;
+    color: #fafafa;
+    padding: 30px 80px;
+}
+button:focus{
+    outline: none;
+}
+.logo{
+
+    text-transform: uppercase;
+    font-weight: bold;
+}
+.btn-cart{
+    background-color: #fafafa;
+    padding: 10px 20px;
+    border: 1px solid transparent;
+    color: #2f2a2d;
+    border-radius: 5px;
+    transition: all ease-in-out .4s;
+    cursor: pointer;
+}
+.btn-cart:hover{
+    background-color: transparent;
+    border-color: #fafafa;
+    color: #fafafa;
+}
+.btn-cart, .logo{
+    align-self: center;
+}
+/*.products {*/
+/*display: flex;*/
+/*justify-content: space-between;*/
+/*flex-wrap: wrap;*/
+/*padding: 40px 80px;*/
+/*}*/
+.products{
+    column-gap: 30px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 200px);
+    grid-template-rows: 1fr;
+    padding: 40px 80px;
+    justify-content: space-between;
+}
+p {
+    margin: 0 0 5px 0;
+}
+.product-item{
+    display: flex;
+    flex-direction: column;
+    width: 200px;
+    border-radius: 5px;
+    overflow: hidden;
+    margin: 20px 0;
+}
+img {
+    max-width: 100%;
+    height: auto
+}
+.desc {
+    border: 1px solid #c0c0c040;
+    padding: 15px
+}
+.cart{
+    position: relative;
+}
+.cart-block{
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
+    border-radius: 5px;
+    box-sizing: border-box;
+    right: 0;
+    top: 130%;
+    position: absolute;
+    background-color: white;
+    padding: 20px;
+    color: black;
+    width: 300px;
 }
 
-header {
-  padding: 15px 25px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  width: 100%;
-  min-height: 70px;
-  background-color: #c2a97d;
-  text-align: right;
+.invisible{
+    display: none;
+}
+.cart-block:before{
+    content: '';
+    width: 0;
+    height: 0;
+    position: absolute;
+    top: -10px;
+    right: 35px;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-bottom: 10px solid white;
 }
 
-.btn-cart,
-.btn-cart-block {
-  width: 120px;
-  height: 35px;
-  font-size: 1.2em;
-  border: none;
-  outline: none;
-  background-color: #a07945;
-  color: #433512;
+.buy-btn, .del-btn{
+    margin-top: 5px;
+    background-color: #2f2a2d;
+    padding: 5px 15px;
+    border: 1px solid transparent;
+    color: #fafafa;
+    border-radius: 5px;
+    transition: all ease-in-out .4s;
+    cursor: pointer;
 }
-
-.btn-cart:hover,
-.btn-cart-block:hover {
-  background-color: #433512;
-  color: #d1ccc4;
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+.buy-btn:hover, .del-btn:hover{
+    background-color: #fafafa;
+    color: #2f2a2d;
+    border: 1px solid #2f2a2d;
 }
-
-.btn-cart:active,
-.btn-cart-block:active {
-  background-color: #7c4a24;
-  color: #d5dadd;
-}
-
-.btn-cart-block {
-  margin: 5px;
-}
-
-.btn-cart-block-addItem, .btn-cart-block-delItem {
-  width: 60px;
-}
-
-.cart-wrp {
-  padding: 50px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  width: 100%;
-  height: 100vh;
-  background-color: rgba(67, 53, 18, 0.6);
-  position: absolute;
-  left: 0;
-  top: 0;
-  visibility: hidden;
-}
-
-.cart-block {
-  margin: 0 auto;
-  padding: 10px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  width: 800px;
-  min-height: 200px;
-  background-color: #c2a97d;
-  text-align: left;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-}
-
-.cart-btnsAll {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
 .cart-item {
-  font-size: 1em;
-  color: #433512;
+    display: flex;
+    justify-content: space-between;
 }
-
-.cart-item-name {
-  display: inline-block;
-  width: 37%;
-  font-weight: 600;
+.cart-item:not(:last-child){
+    margin-bottom: 20px;
 }
-
-.cart-item-price {
-  display: inline-block;
-  width: 15%;
-  text-align: center;
+.product-bio{
+    display: flex;
 }
-
-.cart-item-quantity {
-  display: inline-block;
-  width: 15%;
-  text-align: center;
+.cart-item img{
+    align-self: flex-start;
+    margin-right: 15px;
 }
-
-.cart-item-summ {
-  display: inline-block;
-  width: 15%;
-  text-align: center;
+.product-single-price{
+    color: #474747;
+    font-size: 0.5em;
 }
-
-.products {
-  padding: 25px;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (1fr)[4];
-      grid-template-columns: repeat(4, 1fr);
-  grid-gap: 15px 15px;
-  background-color: #D0B48F;
+.product-price{
+    margin-left: 30px;
 }
-
-.product-item {
-  padding: 10px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  width: 100%;
-  height: 100%;
-  background-color: #a07945;
+.product-desc{
+    max-width: 150px;
 }
-
-.product-item:hover {
-  background-color: #c2a97d;
+.product-quantity {
+    margin-top: 15px;
+    font-size: 0.75em;
 }
-
-.product-item:hover > .buy-btn {
-  background-color: #d1ccc4;
+.right-block{
+    text-align: right;
 }
-
-.product-item:hover > .buy-btn:hover {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
-  background-color: #a07945;
-  color: #d5dadd;
+.btn-search {
+    background-color: transparent;
+    border: none;
+    color: #fafafa;
+    font-size: 1.2em;
+    position: absolute;
+    bottom: 5px;
+    right: 0;
 }
-
-.product-item:hover > .buy-btn:active {
-  background-color: #c2a97d;
-  color: #a07945;
+.search-form{
+    position: relative;
+    margin-right: 50px;
+    display: inline-block;
 }
-
-.product-item:active {
-  background-color: #d1ccc4;
+.search-field:focus{
+    outline: none;
 }
-
-.product-item:active > .product-item__title,
-.product-item:active > .product-item__price {
-  color: #c2a97d;
+.search-field {
+    box-sizing: border-box;
+    width: 200px;
+    color: #fafafa;
+    padding: 10px;
+    background-color: transparent;
+    border: none;
+    border-bottom: 2px solid #fafafa;
 }
-
-.product-item__title {
-  margin: 0 0 10px 0;
-  padding: 0;
-  font-size: 1.5em;
-  color: #433512;
-  font-weight: 600;
-}
-
-.product-item__price {
-  margin: 10px 0;
-  padding: 0;
-  font-size: 1em;
-  color: #433512;
-}
-
-.product-item__img {
-  width: 100%;
-}
-
-.buy-btn {
-  width: 100px;
-  height: 30px;
-  font-size: 1em;
-  font-weight: 600;
-  border: none;
-  outline: none;
-  background-color: #c2a97d;
-  color: #433512;
-}
-/*# sourceMappingURL=style.css.map */
