--- a/public/sass/style.sass
+++ b/public/sass/style.sass
@@ -9,8 +9,11 @@ body
     width: 1280px
     font-family: 'Comfortaa', cursive
 
+main
+	background-color: #04376C
+
 header
-	padding: 30px 80px 30px 40px
+	padding: 30px 40px
 	display: flex
 	background-color: $var1
 	justify-content: space-between
@@ -32,6 +35,7 @@ button:focus
 .header-text
 	margin: 0 20px
 	padding: 10px
+	max-width: 680px
 	text-align: center
 	background: radial-gradient(circle, rgba(0,0,0,0.33) 74%, rgba(255,255,255,0) 100%)
 	color: $gold-l
@@ -39,7 +43,7 @@ button:focus
 
 .btn-cart 
 	background-color: $gold
-	padding: 10px 20px
+	padding: 10px
 	border: 1px solid transparent
 	color: $var1
 	border-radius: 5px
@@ -72,6 +76,7 @@ p
 	border-radius: 5px
 	overflow: hidden
 	margin: 20px 0
+	background-color: $gold-l
 
 img 
 	max-width: 100%
@@ -86,6 +91,7 @@ img
 	align-items: flex-end
 	position: relative
 	order: 3
+	flex-wrap: wrap
 
 	&-block 
 		box-shadow: 0 0 5px rgba(0, 0, 0, 0.62)
@@ -108,6 +114,11 @@ img
 			border-left: 10px solid transparent
 			border-right: 10px solid transparent
 			border-bottom: 10px solid white
+
+	&-text
+		font-weight: 900
+		color: $gold-l
+		font-size: 13px
 		
 	
 	&-item 
@@ -127,7 +138,7 @@ img
 
 .buy-btn, .del-btn 
 	margin-top: 5px
-	background-color: $var1
+	background-color: $gold
 	padding: 5px 15px
 	border: 1px solid transparent
 	color: $var2
@@ -139,6 +150,10 @@ img
 		color: $var1
 		border: 1px solid $var1
 	
+.prod-img
+	display: block
+	max-height: 133px
+	min-height: 133px
 
 .product-bio 
 	display: flex
