--- a/public/sass/style.sass
+++ b/public/sass/style.sass
@@ -155,6 +155,10 @@ img
 	max-height: 133px
 	min-height: 133px
 
+	&-small
+		display: block
+		max-width: 66px
+
 .product-bio 
 	display: flex
 
@@ -167,9 +171,11 @@ img
 
 .product-desc 
 	max-width: 150px
+	display: flex
+    flex-direction: column
+    justify-content: space-between
 
-.product-quantity 
-	margin-top: 15px
+.product-quantity
 	font-size: 0.75em
 
 .right-block 
