--- a/public/sass/style.sass
+++ b/public/sass/style.sass
@@ -280,3 +280,11 @@ footer
 				
 	&-map
 	&-social
+		width: 16%
+		color: $gold
+		font-size: 16px
+		&-text > svg
+			font-size: 30px
+    		margin: 0 20px 0 0
+		&-text:last-of-type > svg
+			margin: 0 16px 0 0
