--- a/public/css/style.css
+++ b/public/css/style.css
@@ -376,4 +376,19 @@ footer {
   font-size: 15px;
   color: #ffc400;
 }
+
+.footer-social {
+  width: 16%;
+  color: #ffc400;
+  font-size: 16px;
+}
+
+.footer-social-text > svg {
+  font-size: 30px;
+  margin: 0 20px 0 0;
+}
+
+.footer-social-text:last-of-type > svg {
+  margin: 0 16px 0 0;
+}
 /*# sourceMappingURL=style.css.map */
